[package]
name = "rss-arcade-scenes"
version = "0.1.0"
authors = ["Peter Stanko <peter.stanko0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dotenv = "0.15.0"

# Logging
slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"
slog-envlogger = "2.2.0"
env_logger = "0.7.1"

# Serde
serde = {version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
regex = "1.3.9"
shlex = "0.1.1"
